# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  exampleScene.cpp
apps/: CMakeLists.txt  cameraMove.cpp  exampleScene.cpp  exampleSceneOld.cpp  firstTriangle.cpp  firstTriangle2.cpp  firstWindow.cpp  main.cpp  rotatingSquare.cpp
apps/firstTriangle/: CMakeLists.txt  firstTriangle.cpp  loadShader.cpp  loadShader.h  vertexShader.glsl
assets/models/campfire/: campfire.mtl
assets/models/floor/: floor.mtl
assets/models/star/: star.mtl
assets/models/tree/: tree.mtl
cmake/: DownloadData.txt  configure.cmake
cmake/Modules/: Findassimp.cmake
include/RendGL/: Camera.h  Light.h  Mesh.h  Model.h  Scene.h  Scene3D.h  SceneCrazyDisco.h  SceneInterface.h  Shader.h  Texture.h  Utils.h  Window.h
lib/: CMakeLists.txt  Camera.cpp  Config.h.in  Light.cpp  Mesh.cpp  Model.cpp  Primitive.cpp  Scene.cpp  Scene3D.cpp  SceneCrazyDisco.cpp  Shader.cpp  StaticModel.cpp  Texture.cpp  Utils.cpp  Window.cpp  Window.h
lib/shaders/: fragmentShader.glsl  fragmentShaderBasic.glsl  fragmentShader_noTexture.glsl  rotatingSquareFragment.glsl  rotatingSquareVertex.glsl  vertexShader.glsl  vertexShaderBasic.glsl
scenes/: exampleScene.json  welcomeToOpenGL_hero.json
shaders/: fShader.txt  vShader.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Config.h.in  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  Shader.cpp  Shader.h  StaticModel.h  Texture.cpp  Texture.h  Window.cpp
src/shaders/: fShader.glsl  fragmentShader_texture.glsl  vShader.glsl
test/: CMakeLists.txt  CameraTest.cpp  tests.cpp
tests/: CMakeLists.txt  CameraTest.cpp  ModelTest.cpp  UtilsTest.cpp  WindowTest.cpp
